# 2DInterpolation

./: CMakeLists.txt  Interpolator2D.cpp  Interpolator2D.h  README.md  expects.h  gtest.cpp  main.cpp  map  output.txt
